--- a/Interests.css
+++ b/Interests.css
@@ -285,7 +285,7 @@
 /* For Mobile or Small Screens */
 
 
-    @media only screen and (max-width: 736px){
+    @media screen and (max-width: 736px){
         #wrapper{
                    
             display: grid;
