--- a/Projects.css
+++ b/Projects.css
@@ -324,7 +324,7 @@
 /* For Mobile or Small Screens */
 
 
-    @media only screen and (max-width: 736px){
+    @media screen and (max-width: 736px){
         #wrapper{
                    
             display: grid;
