--- a/Tools & Frameworks.css
+++ b/Tools & Frameworks.css
@@ -406,7 +406,7 @@
 /* For Mobile or Small Screens */
 
 
-@media only screen and (max-width: 736px){
+@media screen and (max-width: 736px){
     #wrapper{
                
         display: grid;
