--- a/Tools & Frameworks.css
+++ b/Tools & Frameworks.css
@@ -406,83 +406,151 @@
 /* For Mobile or Small Screens */
 
 
-@media screen and (max-width: 736px){
+@media only screen and (max-width: 736px){
     #wrapper{
-               
+                   
         display: grid;
-        grid-template-columns: 0.5fr 300px 400px 400px 0.5fr;
-        grid-template-rows: 90px 800px 800px 50px;
+        grid-template-columns:  165px 200px;
+        grid-template-rows: 70px 800px 1000px 40px;
         grid-template-areas: 
-        ". name nav-tab nav-tab ."
-        ". main main main ."
-        ". main main main ."
-        ". footer footer footer .";
-        margin-top: 120px;
+        "name name"
+        "main main "
+        "main main "
+        "footer footer ";
+        margin-top: 50px;
     }
     #nav-name{
       
-       
-        font-size: 20px;
+        grid-area: name;
+            
+        background-color: transparent;
+
+        font-weight: 50;
+        font-family: Helvetica;
+        font-size: 15px;
        
         padding-left: 0%;
-        padding-bottom: 10px;
+        padding-bottom: 0px;
+        color: black;
+        text-align: center;
+        margin-left: 0px;
+      
        
      }
 
+     #nav-tab{
+        grid-area: name;
+        background-color: transparent;
+        padding: 20px;
 
-     #nav-button-list li{
-        padding-top: 1px;
-        padding-left: 10px;
-        padding-right: 10px; 
-      
     }
 
+    #nav-button-list{
+        background-color: transparent;
+            
+          
+            margin-right: 0%;
+           
+            
+         }
+         
 
-    .nav-button-font{
-        font-size: 18px;
-        font-weight: 50;
-        font-family: Arial;
-        
-    }
+         #nav-button-list li{
+            padding-top: 1px;
+            padding-left: 4px;
+            padding-right: 4px; 
+          
+        }
+
+        .nav-button-image{
+            width: 15px;
+            height: 15px;
+            border: 2px solid black;
+        }
+
+        .nav-button-font{
+            font-size: 12px;
+            font-weight: 50;
+            font-family: Arial;
+            
+        }
+    
     #main{
         grid-area: main;
-        background-color: white;
+        background-color: transparent;
         border: 1px solid gray;
-        margin-top: 40px;
+        margin-top: 30px;
     
         display: grid;
-        grid-template-columns:500px 500px;
-        grid-template-rows: 150px 700px;
+        grid-template-columns:300px;
+        grid-template-rows: 700px;
     
         grid-template-areas: 
-        "photo-list photo-list"
-        "description description";
+        "description";
     
-        padding: 50px;
+        padding: 0px;
     
     }
+
+
+    #description{
+        grid-area: description;
+        background-color: white;
+        
+    
+        display: grid;
+        grid-template-columns: 490px;
+    
+        grid-template-areas: 
+        "box1"
+        "box2";
+    
+        column-gap: 20px;
+        
+    
+    }
+
+
+    .name{
+        background-color: lightgray;
+        border-radius: 5px;
+        border: 1px solid white;
+        text-align: center;
+        padding-top: 20px;
+    
+        font-size: 20px;
+        font-family: Arial;
+        font-weight: 50;
+        color: black;
+    }
+    
+
 
     #box1{
         grid-area: box1;
         display: grid;
-       
-        background-color: white;
+        padding: 50px;
+        background-color: transparent;
     
     
-        grid-template-columns:240px 240px; 
-        grid-template-rows: repeat(5,150px);
+        grid-template-columns:240px; 
+        grid-template-rows: repeat(9,80px);
     
     
-       grid-template-areas: 
-       "title1 title1"
-       "swift cpp"
-       "html css"
-       "js jquery"
-       "json python";
+        grid-template-areas: 
+        "title1 "
+        "swift "
+        "html "
+        "js "
+        "json "
+        "cpp"
+        "css"
+        "jquery"
+        "python";
     
 
-       column-gap:10px;
-       row-gap:10px;
+        column-gap:10px;
+        row-gap:10px;
     
     }
 
@@ -494,12 +562,162 @@
         color: black;
         font-size: 18px;
         text-align: center;
-        padding: 20px;
+        padding: 40px;
+        background-color: transparent;
         
     }
 
+    #swift{
+        grid-area: swift;
+        
+    }
+    
+    
+    #cpp{
+        grid-area: cpp;
+        
+    }
+    
+    #html{
+        grid-area: html;
+         
+    }
+    
+    
+    #css{
+        grid-area: css;
+         
+    }
+    
+    
+    
+    #js{
+        grid-area: js;
+      
+    }
+    
+    
+    #jquery{
+        grid-area: jquery;
+          
+    }
+    
+    #json{
+        grid-area: json;
+       
+    }
+    
+    #python{
+        grid-area: python;
+       
+    }
     
 
+    
+    
+    
+    
+    
+    
+    
+    #box2{
+        grid-area: box2;
+        display: grid;
+        background-color: transparent;
+        padding: 50px;
+    
+     
+    
+        grid-template-columns: 240px ;
+    
+        grid-template-rows: repeat(7,80px);
+        
+      
+    
+        grid-template-areas: 
+        "title2 "
+        "xcode "
+        "vs "
+        "firebase "
+        "idle"
+        "mo"
+        "eclipse";
+    
+    
+       column-gap:10px;
+       row-gap:10px;
+    
+      
+    }
+    
+    #title2{
+        grid-area: title2;
+        font-family: Arial;
+        font-weight: bold;
+        color: black;
+        font-size: 18px;
+        text-align: center;
+        padding: 20px;
+        
+    }
+    
+    
+    #xcode{
+        grid-area: xcode;
+    }
+    
+    
+    #idle{
+        grid-area: idle;
+    }
+    
+    
+    #vs{
+        grid-area: vs;
+    }
+    
+    #mo{
+        grid-area: mo;
+    }
+    
+    #firebase{
+        grid-area: firebase;
+    }
+    
+    #eclipse{
+        grid-area: eclipse;
+    }
 
+    .photo{
+        width: 0px;
+        height: 0px;
+        background-color: transparent;
+    }
+
+    #footer{
+        font-size: 15px;
+        font-weight: 50;
+        font-family: Arial;
+    }
+
+
+    #footer{
+        grid-area: footer;
+        background-color: gray;
+
+   
+        font-weight: 50;
+        color: white;
+        text-align: center;
+    }
+
+    #photo-list{
+       
+        background-color: transparent;
+    
+    
+    
+      
+    }
 
 }
